// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial state renders button at mobile width 1`] = `
<div>
  <section
    className="filter-panel"
  >
    <div
      className="filter-button"
    >
      <button
        className="a-btn"
        onClick={[Function]}
        title="Close filters"
      >
        Close filters 
        <svg
          className="cf-icon-svg"
          viewBox="0 0 718.9 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
          />
        </svg>
      </button>
    </div>
    <h3>
      Filter results by...
    </h3>
    <section
      className="o-expandable aggregation date-filter"
    >
      <button
        aria-label="Hide Date CFPB received the complaint filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Date CFPB received the complaint
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p />
        <div>
          <ul
            className="date-inputs"
          >
            <li>
              <label
                className="a-label a-label__heading body-copy"
                htmlFor="date_received-from"
              >
                From
              </label>
              <div
                className="m-btn-inside-input"
              >
                <input
                  className="a-text-input"
                  id="date_received-from"
                  max="2020-05-05"
                  min="2011-12-01"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="M/D/YYYY"
                  type="date"
                  value=""
                />
                <button
                  className="a-btn a-btn__link"
                  onClick={[Function]}
                >
                  <svg
                    className="cf-icon-svg"
                    viewBox="0 0 718.9 1200"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
                    />
                  </svg>
                  <span
                    className="u-visually-hidden"
                  >
                    Clear date received from filter
                  </span>
                </button>
              </div>
            </li>
            <li>
              <label
                className="a-label a-label__heading body-copy"
                htmlFor="date_received-through"
              >
                Through
              </label>
              <div
                className="m-btn-inside-input"
              >
                <input
                  className="a-text-input"
                  id="date_received-through"
                  max="2020-05-05"
                  min="2011-12-01"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="M/D/YYYY"
                  type="date"
                  value=""
                />
                <button
                  className="a-btn a-btn__link"
                  onClick={[Function]}
                >
                  <svg
                    className="cf-icon-svg"
                    viewBox="0 0 718.9 1200"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
                    />
                  </svg>
                  <span
                    className="u-visually-hidden"
                  >
                    Clear date received through filter
                  </span>
                </button>
              </div>
            </li>
          </ul>
          <section
            className="date-ranges m-btn-group"
          >
            <p>
              Date range (Click to modify range)
            </p>
            <button
              className="a-btn date-selector range-3m"
              onClick={[Function]}
            >
              3m
            </button>
            <button
              className="a-btn date-selector range-6m"
              onClick={[Function]}
            >
              6m
            </button>
            <button
              className="a-btn date-selector range-1y"
              onClick={[Function]}
            >
              1y
            </button>
            <button
              className="a-btn date-selector range-3y"
              onClick={[Function]}
            >
              3y
            </button>
            <button
              className="a-btn date-selector range-all"
              onClick={[Function]}
            >
              All
            </button>
          </section>
          <p>
             
            CFPB updated product and issue options available to consumers in April 2017 
            <a
              aria-label="Learn more about Product and Issue changes (opens in new window)"
              href="https://files.consumerfinance.gov/f/documents/201704_cfpb_Summary_of_Product_and_Sub-product_Changes.pdf"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn More
            </a>
          </p>
        </div>
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation product"
    >
      <button
        aria-label="Hide Product / sub-product filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Product / sub-product
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The type of product and sub-product the consumer identified in the complaint
        </p>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation issue"
    >
      <button
        aria-label="Hide Issue / sub-issue filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Issue / sub-issue
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The type of issue and sub-issue the consumer identified in the complaint
        </p>
        <section
          className="typeahead "
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="m-btn-inside-input input-contains-label"
          >
            <div
              className="input-contains-label_before input-contains-label_before__search"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 880.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
                />
              </svg>
            </div>
            <label
              className="u-visually-hidden"
              htmlFor="issue-typeahead"
            >
              Start typing to begin listing issues
            </label>
            <input
              autoComplete="off"
              className="a-text-input"
              id="issue-typeahead"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter name of issue"
              type="text"
              value=""
            />
          </div>
        </section>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation state"
    >
      <button
        aria-label="Hide State filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          State
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The state in the mailing address provided by the consumer
        </p>
        <section
          className="typeahead "
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="m-btn-inside-input input-contains-label"
          >
            <div
              className="input-contains-label_before input-contains-label_before__search"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 880.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
                />
              </svg>
            </div>
            <label
              className="u-visually-hidden"
              htmlFor="state-typeahead"
            >
              Start typing to begin listing US states
            </label>
            <input
              autoComplete="off"
              className="a-text-input"
              id="state-typeahead"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter state name or abbreviation"
              type="text"
              value=""
            />
          </div>
        </section>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation"
    >
      <button
        aria-label="Hide ZIP code filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          ZIP code
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The mailing ZIP code provided by the consumer
        </p>
        <section
          className="typeahead "
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="m-btn-inside-input input-contains-label"
          >
            <div
              className="input-contains-label_before input-contains-label_before__search"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 880.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
                />
              </svg>
            </div>
            <label
              className="u-visually-hidden"
              htmlFor="zipcode-typeahead"
            >
              Start typing to begin listing zip codes
            </label>
            <input
              autoComplete="off"
              className="a-text-input"
              id="zipcode-typeahead"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter first three digits of ZIP code"
              type="text"
              value=""
            />
          </div>
        </section>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation company"
    >
      <button
        aria-label="Hide Company name filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Company name
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The complaint is about this company.
        </p>
        <section
          className="typeahead "
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="m-btn-inside-input input-contains-label"
          >
            <div
              className="input-contains-label_before input-contains-label_before__search"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 880.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
                />
              </svg>
            </div>
            <label
              className="u-visually-hidden"
              htmlFor="company-typeahead-filter-company"
            >
              Start typing to begin listing companies
            </label>
            <input
              autoComplete="off"
              className="a-text-input"
              id="company-typeahead-filter-company"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter company name"
              type="text"
              value=""
            />
          </div>
        </section>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple timely"
    >
      <button
        aria-label="Hide Did company provide a timely response? filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Did company provide a timely response?
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple company_response"
    >
      <button
        aria-label="Hide Company response to consumer filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Company response to consumer
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple company_public_response"
    >
      <button
        aria-label="Hide Company public response filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Company public response
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="o-expandable aggregation date-filter"
    >
      <button
        aria-label="Hide The date the CFPB sent the complaint to the company filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          The date the CFPB sent the complaint to the company
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p />
        <div>
          <ul
            className="date-inputs"
          >
            <li>
              <label
                className="a-label a-label__heading body-copy"
                htmlFor="company_received-from"
              >
                From
              </label>
              <div
                className="m-btn-inside-input"
              >
                <input
                  className="a-text-input"
                  id="company_received-from"
                  max="2020-05-05"
                  min="2011-12-01"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="M/D/YYYY"
                  type="date"
                  value=""
                />
                <button
                  className="a-btn a-btn__link"
                  onClick={[Function]}
                >
                  <svg
                    className="cf-icon-svg"
                    viewBox="0 0 718.9 1200"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
                    />
                  </svg>
                  <span
                    className="u-visually-hidden"
                  >
                    Clear company received from date filter
                  </span>
                </button>
              </div>
            </li>
            <li>
              <label
                className="a-label a-label__heading body-copy"
                htmlFor="company_received-through"
              >
                Through
              </label>
              <div
                className="m-btn-inside-input"
              >
                <input
                  className="a-text-input"
                  id="company_received-through"
                  max="2020-05-05"
                  min="2011-12-01"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="M/D/YYYY"
                  type="date"
                  value=""
                />
                <button
                  className="a-btn a-btn__link"
                  onClick={[Function]}
                >
                  <svg
                    className="cf-icon-svg"
                    viewBox="0 0 718.9 1200"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
                    />
                  </svg>
                  <span
                    className="u-visually-hidden"
                  >
                    Clear company received through date filter
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple consumer_consent_provided"
    >
      <button
        aria-label="Hide Consumer consent provided? filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Consumer consent provided?
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="single-checkbox"
    >
      <h4>
        Only show complaints with narratives?
      </h4>
      <div
        className="m-form-field m-form-field__checkbox"
      >
        <input
          checked={false}
          className="a-checkbox"
          disabled={false}
          id="filterHasNarrative"
          onChange={[Function]}
          type="checkbox"
          value="has_narrative"
        />
        <label
          className="a-label"
          htmlFor="filterHasNarrative"
        >
          Yes
        </label>
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple submitted_via"
    >
      <button
        aria-label="Hide How did the consumer submit the complaint to the CFPB? filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          How did the consumer submit the complaint to the CFPB?
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple tags"
    >
      <button
        aria-label="Hide Tags filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Tags
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
  </section>
</div>
`;

exports[`initial state renders filter toggle at mobile width 1`] = `<div />`;

exports[`initial state renders without crashing 1`] = `
<div>
  <section
    className="filter-panel"
  >
    <h3>
      Filter results by...
    </h3>
    <section
      className="o-expandable aggregation date-filter"
    >
      <button
        aria-label="Hide Date CFPB received the complaint filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Date CFPB received the complaint
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p />
        <div>
          <ul
            className="date-inputs"
          >
            <li>
              <label
                className="a-label a-label__heading body-copy"
                htmlFor="date_received-from"
              >
                From
              </label>
              <div
                className="m-btn-inside-input"
              >
                <input
                  className="a-text-input"
                  id="date_received-from"
                  max="2020-05-05"
                  min="2011-12-01"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="M/D/YYYY"
                  type="date"
                  value="Invalid Date"
                />
                <button
                  className="a-btn a-btn__link"
                  onClick={[Function]}
                >
                  <svg
                    className="cf-icon-svg"
                    viewBox="0 0 718.9 1200"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
                    />
                  </svg>
                  <span
                    className="u-visually-hidden"
                  >
                    Clear date received from filter
                  </span>
                </button>
              </div>
            </li>
            <li>
              <label
                className="a-label a-label__heading body-copy"
                htmlFor="date_received-through"
              >
                Through
              </label>
              <div
                className="m-btn-inside-input"
              >
                <input
                  className="a-text-input"
                  id="date_received-through"
                  max="2020-05-05"
                  min="2011-12-01"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="M/D/YYYY"
                  type="date"
                  value="Invalid Date"
                />
                <button
                  className="a-btn a-btn__link"
                  onClick={[Function]}
                >
                  <svg
                    className="cf-icon-svg"
                    viewBox="0 0 718.9 1200"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
                    />
                  </svg>
                  <span
                    className="u-visually-hidden"
                  >
                    Clear date received through filter
                  </span>
                </button>
              </div>
            </li>
          </ul>
          <section
            className="date-ranges m-btn-group"
          >
            <p>
              Date range (Click to modify range)
            </p>
            <button
              className="a-btn date-selector range-3m"
              onClick={[Function]}
            >
              3m
            </button>
            <button
              className="a-btn date-selector range-6m"
              onClick={[Function]}
            >
              6m
            </button>
            <button
              className="a-btn date-selector range-1y"
              onClick={[Function]}
            >
              1y
            </button>
            <button
              className="a-btn date-selector range-3y"
              onClick={[Function]}
            >
              3y
            </button>
            <button
              className="a-btn date-selector range-all"
              onClick={[Function]}
            >
              All
            </button>
          </section>
        </div>
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation product"
    >
      <button
        aria-label="Hide Product / sub-product filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Product / sub-product
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The type of product and sub-product the consumer identified in the complaint
        </p>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation issue"
    >
      <button
        aria-label="Hide Issue / sub-issue filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Issue / sub-issue
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The type of issue and sub-issue the consumer identified in the complaint
        </p>
        <section
          className="typeahead "
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="m-btn-inside-input input-contains-label"
          >
            <div
              className="input-contains-label_before input-contains-label_before__search"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 880.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
                />
              </svg>
            </div>
            <label
              className="u-visually-hidden"
              htmlFor="issue-typeahead"
            >
              Start typing to begin listing issues
            </label>
            <input
              autoComplete="off"
              className="a-text-input"
              id="issue-typeahead"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter name of issue"
              type="text"
              value=""
            />
          </div>
        </section>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation state"
    >
      <button
        aria-label="Hide State filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          State
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The state in the mailing address provided by the consumer
        </p>
        <section
          className="typeahead "
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="m-btn-inside-input input-contains-label"
          >
            <div
              className="input-contains-label_before input-contains-label_before__search"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 880.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
                />
              </svg>
            </div>
            <label
              className="u-visually-hidden"
              htmlFor="state-typeahead"
            >
              Start typing to begin listing US states
            </label>
            <input
              autoComplete="off"
              className="a-text-input"
              id="state-typeahead"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter state name or abbreviation"
              type="text"
              value=""
            />
          </div>
        </section>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation"
    >
      <button
        aria-label="Hide ZIP code filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          ZIP code
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The mailing ZIP code provided by the consumer
        </p>
        <section
          className="typeahead "
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="m-btn-inside-input input-contains-label"
          >
            <div
              className="input-contains-label_before input-contains-label_before__search"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 880.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
                />
              </svg>
            </div>
            <label
              className="u-visually-hidden"
              htmlFor="zipcode-typeahead"
            >
              Start typing to begin listing zip codes
            </label>
            <input
              autoComplete="off"
              className="a-text-input"
              id="zipcode-typeahead"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter first three digits of ZIP code"
              type="text"
              value=""
            />
          </div>
        </section>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation company"
    >
      <button
        aria-label="Hide Company name filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Company name
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p>
          The complaint is about this company.
        </p>
        <section
          className="typeahead "
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="m-btn-inside-input input-contains-label"
          >
            <div
              className="input-contains-label_before input-contains-label_before__search"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 880.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
                />
              </svg>
            </div>
            <label
              className="u-visually-hidden"
              htmlFor="company-typeahead-filter-company"
            >
              Start typing to begin listing companies
            </label>
            <input
              autoComplete="off"
              className="a-text-input"
              id="company-typeahead-filter-company"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter company name"
              type="text"
              value=""
            />
          </div>
        </section>
        <ul />
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple timely"
    >
      <button
        aria-label="Hide Did company provide a timely response? filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Did company provide a timely response?
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple company_response"
    >
      <button
        aria-label="Hide Company response to consumer filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Company response to consumer
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple company_public_response"
    >
      <button
        aria-label="Hide Company public response filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Company public response
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="o-expandable aggregation date-filter"
    >
      <button
        aria-label="Hide The date the CFPB sent the complaint to the company filter"
        className="o-expandable_header o-expandable_target o-expandable_target__expanded"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          The date the CFPB sent the complaint to the company
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-close"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Hide
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        className="o-expandable_content"
      >
        <p />
        <div>
          <ul
            className="date-inputs"
          >
            <li>
              <label
                className="a-label a-label__heading body-copy"
                htmlFor="company_received-from"
              >
                From
              </label>
              <div
                className="m-btn-inside-input"
              >
                <input
                  className="a-text-input"
                  id="company_received-from"
                  max="2020-05-05"
                  min="2011-12-01"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="M/D/YYYY"
                  type="date"
                  value="Invalid Date"
                />
                <button
                  className="a-btn a-btn__link"
                  onClick={[Function]}
                >
                  <svg
                    className="cf-icon-svg"
                    viewBox="0 0 718.9 1200"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
                    />
                  </svg>
                  <span
                    className="u-visually-hidden"
                  >
                    Clear company received from date filter
                  </span>
                </button>
              </div>
            </li>
            <li>
              <label
                className="a-label a-label__heading body-copy"
                htmlFor="company_received-through"
              >
                Through
              </label>
              <div
                className="m-btn-inside-input"
              >
                <input
                  className="a-text-input"
                  id="company_received-through"
                  max="2020-05-05"
                  min="2011-12-01"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="M/D/YYYY"
                  type="date"
                  value="Invalid Date"
                />
                <button
                  className="a-btn a-btn__link"
                  onClick={[Function]}
                >
                  <svg
                    className="cf-icon-svg"
                    viewBox="0 0 718.9 1200"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
                    />
                  </svg>
                  <span
                    className="u-visually-hidden"
                  >
                    Clear company received through date filter
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple consumer_consent_provided"
    >
      <button
        aria-label="Hide Consumer consent provided? filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Consumer consent provided?
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="single-checkbox"
    >
      <h4>
        Only show complaints with narratives?
      </h4>
      <div
        className="m-form-field m-form-field__checkbox"
      >
        <input
          checked={false}
          className="a-checkbox"
          disabled={false}
          id="filterHasNarrative"
          onChange={[Function]}
          type="checkbox"
          value="has_narrative"
        />
        <label
          className="a-label"
          htmlFor="filterHasNarrative"
        >
          Yes
        </label>
      </div>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple submitted_via"
    >
      <button
        aria-label="Hide How did the consumer submit the complaint to the CFPB? filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          How did the consumer submit the complaint to the CFPB?
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
    <hr />
    <section
      className="o-expandable aggregation simple tags"
    >
      <button
        aria-label="Hide Tags filter"
        className="o-expandable_header o-expandable_target o-expandable_target__collapsed"
        onClick={[Function]}
      >
        <h3
          className="h4 o-expandable_header-left o-expandable_label"
        >
          Tags
        </h3>
        <span
          className="o-expandable_header-right o-expandable_link"
        >
          <span
            className="o-expandable_cue o-expandable_cue-open"
          >
            <span
              className="u-visually-hidden-on-mobile"
            >
              Show
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 1000 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H549.6v213.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V655.9H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h213.6V342.3c0-27.6 22.4-50 50-50s50 22.4 50 50v213.6h213.6c27.6 0 50 22.4 50 50s-22.5 50-50.1 50z"
              />
            </svg>
          </span>
        </span>
      </button>
    </section>
  </section>
</div>
`;
